# quera-bootcamp-django

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
contact/: admin.py  forms.py  models.py  urls.py  views.py
contact/migrations/: 0001_initial.py  0002_csat.py  0003_contact_state_alter_contact_phone_number.py
contact/templates/contact/: contact.html  form.html  success.html
core/: apps.py  converters.py  urls.py  views.py
core/templates/core/: base.html  hello.html  index.html
core/templatetags/: core.py
project/: settings.py  urls.py  wsgi.py
