[tool.poetry]
name = "quera-bootcamp-django"
version = "0.1.0"
description = ""
authors = ["Danial Keimasi <danialkeimasi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "quera_bootcamp_django"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.5"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
autoflake = "^2.2.1"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.autoflake]
in-place = true
expand-star-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
remove-all-unused-imports = true
